--- a/.env.example
+++ b/.env.example
@@ -18,21 +18,22 @@ TEST_DB_USER=
 TEST_DB_PASSWORD=
 
 ### EMAIL ###
-# email to send feedback to
-APPLICATION_FEEDBACK_TO_EMAIL=
-# email address to send from
-APPLICATION_FEEDBACK_FROM_EMAIL=
-# email password
-APPLICATION_FEEDBACK_FROM_PWD=
 # email address to send emails from (most likely will be same as feedback from)
 APPLICATION_ERROR_FROM_EMAIL=
+# email address to send from
+APPLICATION_FEEDBACK_FROM_EMAIL=
+# email to send feedback to
+APPLICATION_FEEDBACK_TO_EMAIL=
+# smtp user name
+APPLICATION_EMAIL_SMTP_AUTH_USER=
+# smtp password
+APPLICATION_EMAIL_SMTP_AUTH_PASSWORD=
 # smtp address like smtp.gmail.com
 APPLICATION_EMAIL_SMTP_ADDRESS=
 # smtp email domain
 APPLICATION_EMAIL_DOMAIN=
 # url that will be used to create links in emails
 APPLICATION_EMAIL_URL_HOST=
-
 
 # Facebook is one of the options for logging in to the system and you must have an app account created under facebook developers. This key is for use on production sites. This key stores the application id. (optional)
 XTRATKR_FACEBOOK_APP_ID=
